samples/_failures_safe/1761221004_496410_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_768f0fa2.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_768f0fa2.c:158:5: error: expected expression at end of input
  158 |     add_token(lexer, TOKEN_STRING,
      |     ^~~~~~~~~
./samples/SAFE/__tmp_768f0fa2.c:158:5: error: expected declaration or statement at end of input
